--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "node",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/main.js",
+    "build": "tsc"
   },
   "dependencies": {
     "express": "4.21.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "prettier": "^3.6.2"
   }
 }
