--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "4.21.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "tslog": "^4.10.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
